# Easy2DSandbox

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bullet.prefab  compile_plugin.sh  gameobject.h  init_project.sh  main.cpp  run.sh  script1.c  script1.cpp  script2.c  script2.cpp  script2.h
.cache/clangd/index/: main.cpp.61AD8A9215B3DA42.idx
res/: simple.fs  simple.vs
scripts/: bullet.cpp  bullet.h  gameobject.cpp  gameobject.h  script1.cpp  script1.h  script2.cpp  script2.h  script3.cpp  script3.h
scripts/templates/: header_template.h  source_template.cpp
